--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 11:39:00 AM</p>
+    <p class="lastupdate">09/16/2020 11:44:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">77.4&#176;F</td>
+        <td class="data">77.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">77.4&#176;F</td>
+        <td class="data">77.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">77.4&#176;F</td>
+        <td class="data">77.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.8&#176;F</td>
+        <td class="data">49.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">38%</td>
+        <td class="data">37%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.010 inHg (-0.025)</td>
+        <td class="data">30.008 inHg (-0.028)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NE (45&#176;)</td>
+        <td class="data">2 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.1&#176;F</td>
+        <td class="data">74.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:38:59 AM">
-            77.4</span><br/>
+          <span title="11:43:45 AM">
+            77.9</span><br/>
           <span title="06:54:23 AM">
             46.1</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="11:38:59 AM" class="hival">
-            77.4</span>
+          <span title="11:43:45 AM" class="hival">
+            77.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:23:25 PM (Monday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="07:12:57 AM">
             81</span><br/>
-          <span title="11:37:45 AM">
-            38</span>
+          <span title="11:42:00 AM">
+            37</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          31
+          30
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 20 hours, 52 minutes</td>
+      <td class="data">14 days, 20 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 20 hours, 52 minutes</td>
+      <td class="data">14 days, 20 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
