--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/16/2020 12:24:00 PM</p>
+    <p class="lastupdate">09/16/2020 12:29:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">82.1&#176;F</td>
+        <td class="data">83.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">82.1&#176;F</td>
+        <td class="data">83.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">82.1&#176;F</td>
+        <td class="data">83.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.1&#176;F</td>
+        <td class="data">50.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">33%</td>
+        <td class="data">32%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.991 inHg (-0.052)</td>
+        <td class="data">29.989 inHg (-0.054)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SSE (158&#176;)</td>
+        <td class="data">1 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.5&#176;F</td>
+        <td class="data">74.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:23:43 PM">
-            82.1</span><br/>
+          <span title="12:28:41 PM">
+            83.4</span><br/>
           <span title="06:54:23 AM">
             46.1</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:23:43 PM" class="hival">
-            82.1</span>
+          <span title="12:28:41 PM" class="hival">
+            83.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:23:25 PM (Monday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="07:12:57 AM">
             81</span><br/>
-          <span title="12:08:29 PM">
-            33</span>
+          <span title="12:26:25 PM">
+            32</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:42:01 AM">
             30.047</span><br/>
-          <span title="12:22:01 PM">
-            29.990</span>
+          <span title="12:28:01 PM">
+            29.989</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">14 days, 21 hours, 37 minutes</td>
+      <td class="data">14 days, 21 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">14 days, 21 hours, 37 minutes</td>
+      <td class="data">14 days, 21 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
